# scan-splitter

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint_test.yml
src/: io.py  parser.py  ui.py
tests/: test_io.py  test_parser.py  test_ui.py
