[tool.poetry]
name = "Scan Splitter"
version = "0.1.0"
description = "Split composite scan files into separate landmark & measurement files"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/scan-splitter"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.2"
typer = "^0.3"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.8"
flake8-annotations = "^2.6"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.5"
flake8-fixme = "^1.1"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.1"
mypy = "^0.812"
pep8-naming = "^0.11"
pre-commit = "^2.7"
pytest = "^6.0"
pytest-check = "^1.0"
pytest-cov = "^2.10"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
